--- a/purchase_order_mas/reports/purchaseorder_report.xml
+++ b/purchase_order_mas/reports/purchaseorder_report.xml
@@ -185,7 +185,7 @@
                         <t t-set="tot_qty" t-value="0"/>
                             <t t-foreach="doc.order_line" t-as="line">
                                 <t t-if="line.product_id == consolines['product']">
-                                    <t t-set="tot_qty" t-value="tot_qty + line.product_uom_qty"/>
+                                    <t t-set="tot_qty" t-value="tot_qty + line.product_qty"/>
                                     <t t-set="tot_amt" t-value="tot_amt + line.price_subtotal"/>
                                 </t>
                             </t>
