--- a/account_base/views/account_move.xml
+++ b/account_base/views/account_move.xml
@@ -39,19 +39,15 @@
   </record>
 
 
-
-   <record id="view_invoice_tree_inherit" model="ir.ui.view">
-      <field name="name">account.invoice.tree</field>
-      <field name="model">account.move</field>
-      <field name="inherit_id" ref="account.view_invoice_tree"/>
-      <field name="arch" type="xml">
-          <field name="invoice_date_due" position="before">
-            <field name="invoice_due_date" string="Due Date" optional="show" attrs="{'invisible': [['payment_state', 'in', ('paid', 'in_payment', 'reversed')]]}"/>
-          </field>
-          <field name="invoice_date_due" position="attributes">
-            <attribute name="string">Due Days</attribute>
-          </field>
-      </field>
+  <record id="account_account_form_inherit_payment" model="ir.ui.view">
+        <field name="model">account.account</field>
+        <field name="inherit_id" ref="account.view_account_form"/>
+        <field name="arch" type="xml">
+      
+            <field name='group_id' position='after'>
+                <field name="z_payment"/>
+            </field>
+        </field>
     </record>
 
 </odoo>
