--- a/inventory_base/views/product_groups.xml
+++ b/inventory_base/views/product_groups.xml
@@ -158,6 +158,10 @@
             <field name="inherit_id" ref="stock.view_move_tree"/>
             <field name="arch" type="xml">
                 <field name="product_id" position="after">
+                    <field name="product_category_id" readonly="1">
+                        <form>
+                        </form>
+                    </field>
                     <field name="item_group" readonly="1">
                         <form>
                         </form>
@@ -186,6 +190,10 @@
             <field name="inherit_id" ref="stock.view_move_line_tree"/>
             <field name="arch" type="xml">
                 <field name="product_id" position="after">
+                    <field name="product_category_id" readonly="1">
+                        <form>
+                        </form>
+                    </field>
                     <field name="item_group" readonly="1">
                         <form>
                         </form>
