--- a/mass_custom_fields/views/mass_bom_fields_view.xml
+++ b/mass_custom_fields/views/mass_bom_fields_view.xml
@@ -83,7 +83,7 @@
         </field>
     </record>
 
-    <!-- <record model="ir.ui.view" id="purchase_order_form_sl_no">
+    <record model="ir.ui.view" id="purchase_order_form_sl_no">
         <field name="name">sl.no.purchase.order.form</field>
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_form" />
@@ -95,7 +95,7 @@
                 <field name="serial_no" />
             </xpath>
         </field>
-    </record> -->
+    </record>
 
     <record id="view_form_delivery_terms" model="ir.ui.view">
         <field name="name">view.form.delivery.terms</field>
