--- a/contract_employee/views/hr_employee.xml
+++ b/contract_employee/views/hr_employee.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='user_id']" position="before">
-                <field name="is_contract"/>
+                <field name="is_contract" attrs="{'invisible': [('is_contract', '=', False)]}"/>
             </xpath>
         </field>
     </record> 
@@ -15,6 +15,7 @@
         <field name="name">Contract Employee</field>
         <field name="res_model">hr.employee</field>
         <field name="view_mode">tree,form</field>
+        <field name="context">{'default_is_contract':True,}</field>
         <field name="domain">[('is_contract', '=', True)]</field>
         <!-- <field name="help" type="html">
         </field> -->
